<resources>
    <string name="app_name">calculator</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="tow">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eghit">8</string>
    <string name="nine">9</string>
    <string name="clear">C</string>
    <string name="us">^</string>
    <string name="parantez">( )</string>
    <string name="bol">÷</string>
    <string name="carp">×</string>
    <string name="arieksi">±</string>
    <string name="arti">+</string>
    <string name="eksi">-</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="backspace"> </string>

    <string name="display">Enter in a value</string>
</resources>